# geilalizer

./: .gitignore  CMakeLists.txt  README.md  ROADMAP.md  gui-audit-20260609.md
.github/workflows/: macos-build.yml
docs/: model_001_ir_analysis.md  model_002_nam_selection.md  model_003_tape_and_post_fader_ir_plan.md  product-spec.md
docs/plans/: 2026-06-07-geilalizer-mvp.md
docs/release-audits/: fd9c37b-artifact-inspection.md  fd9c37b-final-source-review.md
src/: App.cpp  App.h  MainComponent.cpp  MainComponent.h
src/core/: AudioConstants.h  AudioEngine.cpp  AudioEngine.h  ChannelState.h  ImportPlanner.h  LevelMeter.h  LinearResampler.h  RenderEngine.cpp  RenderEngine.h  SessionState.h  TapeMachineState.h
src/dsp/: AssetPath.h  AudioBlock.h  HiddenIrAdapter.cpp  HiddenIrAdapter.h  HiddenMixbusIrAdapter.cpp  HiddenMixbusIrAdapter.h  HiddenNamAdapter.cpp  HiddenNamAdapter.h  HiddenPostFaderIrAdapter.cpp  HiddenPostFaderIrAdapter.h  MachineProcessor.cpp  MachineProcessor.h  SafetyLimiter.h
tests/: CoreSmoke.cpp  FunctionalSmoke.cpp  LimiterBypassClickPolicy.cpp  MachinePrepareAssetPolicy.cpp  NamAdapterSmoke.cpp  OfflineRenderSlice.cpp  ProductE2E.cpp  RealtimeCallbackSourceAudit.cpp  RealtimePlaybackStress.cpp  RepositoryPolicySmoke.cpp  SignalChainProbeSmoke.cpp  SignalIrAudit.cpp  TapeMachineBehavior.cpp
